--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_hooks: ^0.20.5
   cached_network_image: ^3.4.1
   google_fonts: ^6.2.1
+  dio: ^5.7.0
 
 
 dev_dependencies:
